2006-05-30  Per Bothner  <per@bothner.com>

	* SlotGet.java (inline): Fix bug in handling of "class" pseudo-field.

2006-05-09  Per Bothner  <per@bothner.com>

	* SlotGet.java (lookupMember): If null caller - as when evaluating -
	the use Object instead to check for accessibility.
	* SlotSet.java (lookupMember): Likewise.

2006-04-23  Per Bothner  <per@bothner.com>

	* InstanceOf.java (inline): Fold if constant.

2006-03-27  Per Bothner  <per@bothner.com>

	* SlotGet.java (getSlotValue, inline): Pass unmangled rather than
	mangled name to ClassExp.slotToMethodName.
	* SlotSet.java (apply): Likewise.
	(inline): Don't call ClassMethods.checkName, which mangles.
	* SlotSet.java (inline): Combine Field/Method handling using Member.

	* SlotGet.java: If the slot name is literal but we don't know the
	object type, then pre-mangle the field name at compile time.
	Based on an idea and prototype by Dean Ferreyra <dferreyra@igc.org>.
	(getSlotValue): New static function.
	(apply2): Call getSlotValue.
	(inline): Rewrite to do field lookup now rather than at compile time.
	(getReturnType): Can therefore be simplified.
	(inline): If field unknown but field name literal, replace by
	invocation of getSlotValue.

2006-03-25  Per Bothner  <per@bothner.com>

	* SlotGet.java (slotRef): New field.

2006-03-24  Per Bothner  <per@bothner.com>

	* SlotGet.java (makeGetField): Change return type.

2006-03-17  Per Bothner  <per@bothner.com>

	* OccurrenceType.java (getInstance): New factory method.

2006-03-15  Per Bothner  <per@bothner.com>

	* InstanceOf.java (language): Make protected, for use by new CastableAs.

	* Invoke.java (inlineClassName): Don't lower a PairClassType to its
	implementationType - that's only correct for 'make' - which does not
	use this method.

2006-03-13  Per Bothner  <per@bothner.com>

	* OccurrenceType.java (compare): Instead of a throw return -2.

	* SlotGet.java (apply): Fix WrongType exception value thrown.

2006-03-03  Per Bothner  <per@bothner.com>
